# mcs-agent-analyser

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  analytics.py  config.py  conversation_analysis.py  custom_rules.py  dataverse_client.py  deps_analyzer.py  diff.py  failure_diagnosis.py  improvement clusters.md  instruction_store.py  linter.py  main.py  model_comparison.py  model_registry.py  models.py  parser.py  pyproject.toml  renamer.py  renderer.py  rxconfig.py  solution_checker.py  timeline.py  transcript.py  utils.py  validator.py
data/: default_lint_modes.yaml  default_rules.yaml  recommendations.yaml  topic_explainer.yaml
diagnosis/: __init__.py  chat.py  judge.py  labels.py  models.py  orchestrator.py  recommendations.py  recovery.py  redaction.py
exports/: __init__.py  citations_csv.py
link_health/: __init__.py  checker.py
prompts/: judge.md  judge_chat.md
renderer/: __init__.py  _helpers.py  conversation_analysis.py  diagnosis.py  dynamic_data.py  knowledge.py  profile.py  prompts.py  report.py  sections.py  timeline_render.py  tools.py  topic_explainer.py
samples/: report.md  sample_report.html  sample_report.md  transcript_report.md
solution_checker/: __init__.py  _helpers.py  agent_config.py  checker.py  knowledge.py  orchestrator.py  security.py  solution_xml.py  topics.py
tests/: test_3511v_coverage.py  test_citations_csv.py  test_conversation_analysis.py  test_conversation_flow_hitl.py  test_diagnosis_chat.py  test_diagnosis_constraints.py  test_diagnosis_integration.py  test_diagnosis_recovery.py  (+18 more)
(+48 files in other folders)
